Add navigation control butons

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -2,6 +2,9 @@
   <mat-toolbar-row>
     <span>My App</span>
     <span class="example-spacer"></span>
+    <a mat-button [routerLink]="'characters'">Characters</a>
+    <a mat-button [routerLink]="'locations'">Locations</a>
+    <a mat-button [routerLink]="'episodes'">Episodes</a>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
