--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,5 +1,1 @@
-<mat-tab-group mat-align-tabs="center">
-  <mat-tab label="Characters">Content 1</mat-tab>
-  <mat-tab label="Locations">Content 2</mat-tab>
-  <mat-tab label="Episodes">Content 3</mat-tab>
-</mat-tab-group>
+<p>characters</p>
