--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="navigation">
     <span>My App</span>
-    <span class="example-spacer"></span>
+    <div>
     <a mat-button [routerLink]="'characters'">Characters</a>
     <a mat-button [routerLink]="'locations'">Locations</a>
     <a mat-button [routerLink]="'episodes'">Episodes</a>
+    </div>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
