--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row class="navigation">
+  <mat-toolbar-row class="navigation" fxLayout="row" fxLayoutAlign="center center">
     <span>My App</span>
     <div>
     <a mat-button [routerLink]="'characters'">Characters</a>
