--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,12 +1,12 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="navbar">
   <mat-toolbar-row class="navigation" fxLayout="row" fxLayoutAlign="center center">
-    <span>My App</span>
+    <span><img src="../../../assets/images/logo.png" alt=""></span>
     <div>
     <a mat-button [routerLink]="'characters'">Characters</a>
     <a mat-button [routerLink]="'locations'">Locations</a>
     <a mat-button [routerLink]="'episodes'">Episodes</a>
     </div>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
+      <mat-icon></mat-icon>
     </button>
   </mat-toolbar-row>
