Update cards spacing

--- a/src/app/characters/characters.component.scss
+++ b/src/app/characters/characters.component.scss
@@ -3,6 +3,7 @@
 .wrapper {
   background: rgb(32, 35, 41) none repeat scroll 0% 0%;
   font-family: 'Architects Daughter', cursive !important;
+  padding-top: 20px;
 }
 
 .character-card {
