Refactor characters module

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar">
-  <mat-toolbar-row class="navigation" fxLayout="row" fxLayoutAlign="center center">
-    <span><img src="../../../assets/images/logo.png" alt=""></span>
+  <mat-toolbar-row class="navigation" fxLayout="row" fxLayoutAlign="space-between center">
+    <span><img src="assets/images/logo.png" alt=""></span>
     <div>
     <a mat-button [routerLink]="'characters'">Characters</a>
     <a mat-button [routerLink]="'locations'">Locations</a>
