Update hero section design

--- a/src/app/home/hero-section/hero-section.component.html
+++ b/src/app/home/hero-section/hero-section.component.html
@@ -1,1 +1,3 @@
-<p>hero-section works!</p>
+<div class="wrapper" fxLayoutAlign="center center">
+  <h1 class="hero-title">The Rick and Morty APP!</h1>
+</div>
