Display details info from API

--- a/src/app/characters/details/details.component.html
+++ b/src/app/characters/details/details.component.html
@@ -1,3 +1,16 @@
-<p>
-  details works!
-</p>
+<div class="wrapper">
+  <ng-container *ngIf="character">
+    <div fxLayout="row" class="hero-container">
+      <img [src]="character.image" alt="">
+      <div fxLayout="column">
+        <h1 class="character-header" fxLayoutAlign="center center"> {{ character.name }}</h1>
+        <h2 class="hero-text">Status: {{ character.status }}</h2>
+        <h2 class="hero-text">Species: {{ character.species }}</h2>
+        <h2 class="hero-text" *ngIf="character.type">Type: {{ character.type }}</h2>
+        <h2 class="hero-text">Gender: {{ character.gender }}</h2>
+        <h2 class="hero-text">Origin: {{ character.origin.name }}</h2>
+        <h2 class="hero-text">Location: {{ character.location.name }}</h2>
+      </div>
+    </div>
+  </ng-container>
+</div>
